fest-wollbi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fest-wollbi
  namespace: fest-wollbi
  labels:
    app.kubernetes.io/name: fest-wollbi
spec:
  selector:
    app.kubernetes.io/name: fest-wollbi
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
